xtend files converted to java, gradle build does not yet work